--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^6.1.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.16.0",
     "react-scroll-to-top": "^3.0.0",
